--- a/Renderer/Renderer.vcxproj.filters
+++ b/Renderer/Renderer.vcxproj.filters
@@ -97,6 +97,12 @@
     <Filter Include="源文件\Renderer\Terrain\DetailObjectSystem">
       <UniqueIdentifier>{ac031b58-573a-443a-b344-6031c5b3d4b4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\Renderer\ShadowSystem">
+      <UniqueIdentifier>{c5c7ba96-c6fd-4d08-a4ae-ef976cb0165c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Renderer\ShadowSystem">
+      <UniqueIdentifier>{790fc044-4f68-4001-a8fa-9941d6b3fad5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BuddyHeapAllocator.h">
@@ -330,6 +336,9 @@
     <ClInclude Include="ClusterTree.h">
       <Filter>头文件\Renderer\Terrain\DetailObjectSystem</Filter>
     </ClInclude>
+    <ClInclude Include="ShadowSystem.h">
+      <Filter>头文件\Renderer\ShadowSystem</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BuddyHeapAllocator.cpp">
@@ -551,8 +560,11 @@
     <ClCompile Include="ClusterTree.cpp">
       <Filter>源文件\Renderer\Terrain\DetailObjectSystem</Filter>
     </ClCompile>
+    <ClCompile Include="ShadowSystem.cpp">
+      <Filter>源文件\Renderer\ShadowSystem</Filter>
+    </ClCompile>
     <ClCompile Include="TAAPass.cpp">
-      <Filter>源文件</Filter>
+      <Filter>源文件\Renderer\RenderPass</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
