--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="ReTextureFileFormat.h" />
     <ClInclude Include="Task_SplitHeightMap.h" />
     <ClInclude Include="TerrainBackend.h" />
+    <ClInclude Include="TerrainTextureAtlasTileCache.h" />
     <ClInclude Include="TerrainPipelinePass.h" />
     <ClInclude Include="TerrainQuadTree.h" />
     <ClInclude Include="TerrainRenderer.h" />
@@ -186,7 +187,6 @@
     <ClInclude Include="TerrainTextureArray.h" />
     <ClInclude Include="TerrainTextureAtlas.h" />
     <ClInclude Include="TextureAtlas.h" />
-    <ClInclude Include="TerrainTiledTexture.h" />
     <ClInclude Include="VegetationPhysicalDataCache.h" />
     <ClInclude Include="VegetationSystem.h" />
     <ClInclude Include="VegetationVirtualTable.h" />
@@ -279,6 +279,7 @@
     <ClCompile Include="TAAPass.cpp" />
     <ClCompile Include="Task_SplitHeightMap.cpp" />
     <ClCompile Include="TerrainBackend.cpp" />
+    <ClCompile Include="TerrainTextureAtlasTileCache.cpp" />
     <ClCompile Include="TerrainPipelinePass.cpp" />
     <ClCompile Include="TerrainQuadTree.cpp" />
     <ClCompile Include="TerrainRenderer.cpp" />
@@ -286,7 +287,6 @@
     <ClCompile Include="TerrainSetting.cpp" />
     <ClCompile Include="TerrainTextureArray.cpp" />
     <ClCompile Include="TerrainTextureAtlas.cpp" />
-    <ClCompile Include="TerrainTiledTexture.cpp" />
     <ClCompile Include="TextureAtlas.cpp" />
     <ClCompile Include="VegetationPhysicalDataCache.cpp" />
     <ClCompile Include="VegetationSystem.cpp" />
