--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -180,6 +180,7 @@
     <ClInclude Include="RuntimeVirtualTextureAtlasTileCache.h" />
     <ClInclude Include="RuntimeVirtualTextureBackend.h" />
     <ClInclude Include="RuntimeVirtualTextureAtlas.h" />
+    <ClInclude Include="RuntimeVirtualTexturePageTable.h" />
     <ClInclude Include="Task_SplitHeightMap.h" />
     <ClInclude Include="TerrainBackend.h" />
     <ClInclude Include="TerrainTextureAtlasTileCache.h" />
@@ -283,6 +284,7 @@
     <ClCompile Include="RuntimeVirtualTextureAtlasTileCache.cpp" />
     <ClCompile Include="RuntimeVirtualTextureBackend.cpp" />
     <ClCompile Include="RuntimeVirtualTextureAtlas.cpp" />
+    <ClCompile Include="RuntimeVirtualTexturePageTable.cpp" />
     <ClCompile Include="TAAPass.cpp" />
     <ClCompile Include="Task_SplitHeightMap.cpp" />
     <ClCompile Include="TerrainBackend.cpp" />
